[project]
name = "airport-graph-agent"
version = "0.1.0"
description = "An agent that converts FAA airport diagrams into Neo4j graph databases"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.43.0",
    "claude-agent-sdk>=0.1.18",
    "neo4j>=5.26.0",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[project.scripts]
airport-graph = "airport_graph_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/airport_graph_agent"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
